@@ -1,3 +1,2 @@
-Drop deprecated GeneralLinearModelAlgorithm | KrigingAlgorithm ctors for 1.21
 Drop deprecated Drawable.draw|clean & Graph.draw|clean|getRCommand|makeR*|GetExtensionMap methods
 Drop deprecated GaussianProcess.GIBBS
